Update meta tags, add logo and OG image, and refine pricing section

--- a/index.html
+++ b/index.html
@@ -3,18 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rakhi-luxe-landing</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>
+      Premium Rakhi Envelopes | Luxury Gold Foil Designs for Raksha Bandhan 2025
+    </title>
+    <meta
+      name="description"
+      content="Premium handcrafted Rakhi envelopes with gold foil designs. Perfect for gifting money with style this Raksha Bandhan. Crystal clear material, elegant presentation, campus & home delivery available."
+    />
+    <meta name="author" content="Premium Rakhi Envelopes" />
+    <meta
+      name="keywords"
+      content="rakhi envelopes, raksha bandhan, premium envelopes, gold foil, money envelopes, rakhi gifts, luxury envelopes, crystal clear envelopes"
+    />
 
-    <meta property="og:title" content="rakhi-luxe-landing" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Premium Rakhi Envelopes | Luxury Gold Foil Designs"
+    />
+    <meta
+      property="og:description"
+      content="Handcrafted premium Rakhi envelopes with gold foil designs. Make your Raksha Bandhan gifts truly special with our elegant crystal clear envelopes."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://premium-rakhi-envelopes.com" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Premium Rakhi Envelopes" />
 
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:title"
+      content="Premium Rakhi Envelopes | Luxury Gold Foil Designs"
+    />
+    <meta
+      name="twitter:description"
+      content="Handcrafted premium Rakhi envelopes with gold foil designs for Raksha Bandhan 2025"
+    />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
