Update meta description for clarity and add Analytics component to App

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
     <meta
       name="description"
-      content="Premium handcrafted Rakhi envelopes with gold foil designs. Perfect for gifting money with style this Raksha Bandhan. Crystal clear material, elegant presentation, campus & home delivery available."
+      content="Premium Rakhi envelopes with gold foil designs. Perfect for gifting money with style this Raksha Bandhan. Crystal clear material, elegant presentation, campus & home delivery available."
     />
     <meta name="author" content="Premium Rakhi Envelopes" />
     <meta
